refactor and update

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* font-family: 'Cutive Mono', monospace;
 font-family: 'Raleway', sans-serif; */
-/* optional other color pallette
+/* other color pallette options
 
 beeef7
 6fc2d0
@@ -11,10 +11,16 @@ ff8246 */
   margin: 0;
 }
 
-body {
-  font-family: 'Raleway', sans-serif;
+html {
+  font-size: calc(1em + 1vw);
 }
 
+body {
+  font-family: 'Raleway', sans-serif;
+  box-sizing: border-box;
+  margin: 0 auto;
+  text-align: center;
+}
 
 /* nav bar */
 nav {
@@ -24,16 +30,13 @@ nav {
   position: sticky;
   top: 0;
   border-bottom: 15px solid #ff8246;
-  text-align: center;
 }
 
 .navLink {
   display: inline-block;
   text-decoration: none;
-  font-size: 1.5rem;
   color: white;
-  padding: 30px 10px;
-  margin: 0 auto;
+  padding: 28px 0.63rem;
 }
 
 .navLink:hover {
@@ -50,42 +53,33 @@ nav {
   background-attachment: fixed;
   background-repeat: no-repeat;
   height: 100vh;
-  text-align: center;
 }
 
 .titleWrapper {
-  padding: 15px;
+  /* padding: 15px; */
+  padding: 0.9rem;
   border-top-right-radius: 30px;
   border-bottom-left-radius: 30px;
   background-color: rgba(214, 228, 237, 0.8);
   display: inline-block;
   width: 60%;
-  margin-top: 100px;
-  border: 3px solid rgb(130, 139, 144);
-  box-shadow: 5px 5px 5px rgba(130, 139, 144, 0.9);
-}
-
-.title {
-  margin: 0 auto;
-  font-size: 2.5rem;
-}
-
-.subtitle {
-  font-size: 2rem;
-  margin: 0 auto;
-  text-align: center;
+  margin-top: 6.25rem;
+  border: 0.188rem solid rgb(130, 139, 144);
+  box-shadow: 0.313rem 0.313rem 0.313rem rgba(130, 139, 144, 0.9);
 }
 
 .quote {
-  padding: 20px;
+  padding: 0.9rem;
   background-color: rgba(214, 228, 237, 0.8);
   display: inline-block;
-  border-top-right-radius: 15px;
-  border-bottom-left-radius: 15px;
-  width: 60%;
-  margin-top: 100px;
-  border: 3px solid rgb(130, 139, 144);
-  box-shadow: 5px 5px 5px rgba(130, 139, 144, 0.9);
+  /* border-top-right-radius: 15px;
+  border-bottom-left-radius: 15px; */
+  border-top-right-radius: 30px;
+  border-bottom-left-radius: 30px;
+  width: 50%;
+  margin-top: 5rem;
+  border: 0.188rem solid rgb(130, 139, 144);
+  box-shadow: 0.313rem 0.313rem 0.313rem rgba(130, 139, 144, 0.9);
 }
 
 /* about section */
@@ -93,19 +87,14 @@ nav {
   background-color: #B4E9E2;
   border-top: 13px solid #373a6d;
   border-bottom: 13px solid #373a6d;
-  text-align: center;
   padding-bottom: 10%;
 }
 
 .aboutWrapper {
   display: inline-block;
-  margin: 0 auto;
 }
 
 .sectionTitle {
-  margin: 0 auto;
-  font-size: 2rem;
-  text-align: center;
   padding-top: 6%;
   padding-bottom: 2%;
 }
@@ -115,7 +104,7 @@ nav {
   text-align: left;
   display: inline-block;
   margin: 8% 5% 10% 5%;
-  padding: 10px;
+  padding: 0.64rem;
   border-radius: 15px;
   background-color: rgb(192, 249, 242);
 }
@@ -130,7 +119,7 @@ nav {
 
 .project-tile {
   margin: 10% 2% 0 2%;
-  padding: 12px 0;
+  padding: 0.75rem 0;
   background-color: #81E2F2;
   background-color: #B4E9E2;
   display: inline-block;
@@ -143,9 +132,9 @@ nav {
 }
 
 .projectTitle {
-  font-sze: 1rem;
   color: black;
-  padding-bottom: 20px;
+  /* padding-bottom: 20px; */
+  padding-bottom: 1rem;
 }
 
 img {
@@ -161,19 +150,17 @@ img {
   padding: 2% 0;
 }
 
-.contactWrapper {
-  margin: 0 auto;
-}
-
 .contactLink {
+  font-size: 0.8rem;
+  width: 15%;
   text-decoration: none;
-  padding: 10px 20px;
+  padding: 0.625em 1.25em;
   color: white;
   background-color: #373a6d;
-  border: 1px solid white;
+  border: 0.125rem solid white;
   border-radius: 15px;
   display: inline-block;
-  margin: 15px 5%;
+  margin: 15px 0.7rem;
   box-shadow: 3px 3px 5px #373a6d;
 }
 
@@ -183,38 +170,13 @@ img {
   border-color: #373a6d;
 }
 
-/* break points */
-/* small/mobile devices */
-@media only screen and (max-width: 385px) {
-  .navLink {
-    font-size: 1rem;
-    padding: 30px 5px;
-  }
-
-  .titleWrapper {
-    margin-top: 75px;
-  }
-
-  .quote {
-    margin-top: 75px;
-  }
-
-  .contactLink {
-    margin: 15px 1%;
-  }
-
-  .project-tile {
-    width: 90%;
-  }
-}
-
 @media only screen and (min-width: 900px) {
   .titleWrapper {
     width: 40%;
   }
 
   .quote {
-    width: 40%;
+    width: 32%;
   }
 
   .project-tile {
